# real-desert-subtitles

./: .gitignore  CMakeLists.txt  README.md
qml/: main.qml
resources/: real-desert-subtitles.desktop
src/: main.cpp
src/app/: application.cpp  application.h  drop-target.cpp  drop-target.h  feature-model.cpp  feature-model.h  file-search.cpp  file-search.h  selected-feature.cpp  selected-feature.h  subtitle-model.cpp  subtitle-model.h
src/dbus/: app.xml  subtitles-adapter.cpp  subtitles-adapter.h
src/lib/: authentication.cpp  authentication.h  file-hash.cpp  file-hash.h  file-saver.cpp  file-saver.h  subtitle-downloader.cpp  subtitle-downloader.h  subtitle-finder.cpp  subtitle-finder.h
src/types/: subtitle-result.cpp  subtitle-result.h
src/ui/: config.cpp  config.h  drop-target.cpp  drop-target.h  feature-model.cpp  feature-model.h  selected-feature.cpp  selected-feature.h  subtitle-model.cpp  subtitle-model.h  ui.cpp  ui.h
